default/objects/Contact/fields/BrokerCode__c.field-meta.xml
<CustomField>
    <fullName>BrokerCode__c</fullName>
    <description>Broker identifier.</description>
    <label>Broker Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>