default/objects/Contact/fields/BrokerName__c.field-meta.xml
<CustomField>
    <fullName>BrokerName__c</fullName>
    <description>Name of the broker.</description>
    <label>Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>