default/objects/Contact/fields/BuildingCapital__c.field-meta.xml
<CustomField>
    <fullName>BuildingCapital__c</fullName>
    <label>Building Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>