default/objects/Contact/fields/BuildingNumber__c.field-meta.xml
<CustomField>
    <fullName>BuildingNumber__c</fullName>
    <description>Building number.</description>
    <label>Risk Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>