default/objects/Contact/fields/CityTown__c.field-meta.xml
<CustomField>
    <fullName>CityTown__c</fullName>
    <description>Town/City of the risk address.</description>
    <label>Risk City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>