default/objects/Contact/fields/ConstructionYear__c.field-meta.xml
<CustomField>
    <fullName>ConstructionYear__c</fullName>
    <label>Construction Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>