default/objects/Contact/fields/Door__c.field-meta.xml
<CustomField>
    <fullName>Door__c</fullName>
    <description>Door letter or number.</description>
    <label>Risk Door</label>
    <length>255</length>
    <type>Text</type>
</CustomField>