default/objects/Contact/fields/FillingCapital__c.field-meta.xml
<CustomField>
    <fullName>FillingCapital__c</fullName>
    <label>Filling Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>