default/objects/Contact/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Risk Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>