default/objects/Contact/fields/IDNumber__c.field-meta.xml
<CustomField>
    <fullName>IDNumber__c</fullName>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>