default/objects/Contact/fields/IDType__c.field-meta.xml
<CustomField>
    <fullName>IDType__c</fullName>
    <description>Type of identification document.</description>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NIF</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>NIE</fullName>
            </value>
            <value>
                <fullName>PASS</fullName>
                <label>Pasaporte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>