default/objects/Contact/fields/IsBrokered__c.field-meta.xml
<CustomField>
    <fullName>IsBrokered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean indicator for a brokered policy.</description>
    <label>Is Brokered Policy</label>
    <type>Checkbox</type>
</CustomField>