default/objects/Contact/fields/LastRenovationYear__c.field-meta.xml
<CustomField>
    <fullName>LastRenovationYear__c</fullName>
    <label>Last Renovation Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>