default/objects/Contact/fields/LegalName__c.field-meta.xml
<CustomField>
    <fullName>LegalName__c</fullName>
    <description>Insured’s name or Corporate/Legal name.</description>
    <label>Name/Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>