default/objects/Contact/fields/LiabilityCapital__c.field-meta.xml
<CustomField>
    <fullName>LiabilityCapital__c</fullName>
    <label>Liability Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>