default/objects/Contact/fields/LineOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>LineOfBusiness__c</fullName>
    <description>Line of business of the policy.</description>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0007</fullName>
                <label>SEGURO DE INCENDIOS</label>
            </value>
            <value>
                <fullName>0008</fullName>
                <label>ROBO Y EXPOLIACIÓN</label>
            </value>
            <value>
                <fullName>0009</fullName>
                <label>ROTURA DE LUNAS Y CRISTALES</label>
            </value>
            <value>
                <fullName>0010</fullName>
                <label>ACCIDENTES INDIVIDUALES</label>
            </value>
            <value>
                <fullName>0011</fullName>
                <label>PERDIDA DE BENEFICIOS</label>
            </value>
            <value>
                <fullName>0012</fullName>
                <label>RESPONSABILIDAD CIVIL</label>
            </value>
            <value>
                <fullName>0013</fullName>
                <label>L.A HOGAR</label>
            </value>
            <value>
                <fullName>0014</fullName>
                <label>LAGUN ARO COMERCIO</label>
            </value>
            <value>
                <fullName>0015</fullName>
                <label>LAGUN ARO COMUNIDAD</label>
            </value>
            <value>
                <fullName>0016</fullName>
                <label>COLECTIVO DE ACCIDENTES</label>
            </value>
            <value>
                <fullName>0017</fullName>
                <label>COMBINADO INDUSTRIAL</label>
            </value>
            <value>
                <fullName>0018</fullName>
                <label>T. R. CONSTRUCCIÓN</label>
            </value>
            <value>
                <fullName>0019</fullName>
                <label>EQUIPOS ELECTRÓNICOS</label>
            </value>
            <value>
                <fullName>0020</fullName>
                <label>TRANSPORTE DE MERCANCÍAS</label>
            </value>
            <value>
                <fullName>0021</fullName>
                <label>ROTURA DE MAQUINARIA</label>
            </value>
            <value>
                <fullName>0022</fullName>
                <label>TODO RIESGO MONTAJE</label>
            </value>
            <value>
                <fullName>0023</fullName>
                <label>CANCELACION ESPECTÁCULO</label>
            </value>
            <value>
                <fullName>0024</fullName>
                <label>LAGUN ARO COMBINADA AGRÍCOLA</label>
            </value>
            <value>
                <fullName>0025</fullName>
                <label>GARANTIA DECENAL</label>
            </value>
            <value>
                <fullName>0026</fullName>
                <label>ACCIDENTES GANADO OVINO</label>
            </value>
            <value>
                <fullName>0027</fullName>
                <label>PROTECCION DE PAGOS</label>
            </value>
            <value>
                <fullName>0028</fullName>
                <label>TODO  RIESGO DE  DAÑOS MATERIALES</label>
            </value>
            <value>
                <fullName>0029</fullName>
                <label>RESPONSABILIDAD CIVIL CAZADOR</label>
            </value>
            <value>
                <fullName>0030</fullName>
                <label>EMBARCACIONES DE RECREO</label>
            </value>
            <value>
                <fullName>0031</fullName>
                <label>AON @ LAGUN ARO PYME</label>
            </value>
            <value>
                <fullName>0032</fullName>
                <label>LAGUN ARO NEGOCIO</label>
            </value>
            <value>
                <fullName>0033</fullName>
                <label>0033 - LAGUN ARO NEGOCIO</label>
            </value>
            <value>
                <fullName>0034</fullName>
                <label>PATINETES ELECTRICOS Y BICICLETAS</label>
            </value>
            <value>
                <fullName>0035</fullName>
                <label>Hogar - Extracontractual</label>
            </value>
            <value>
                <fullName>0036</fullName>
                <label>Hogar - Básico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>