default/objects/Contact/fields/OtherContactInfo__c.field-meta.xml
<CustomField>
    <fullName>OtherContactInfo__c</fullName>
    <description>Any other contact information of the insured.</description>
    <label>Other Contact Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>