default/objects/Contact/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <externalId>true</externalId>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>