default/objects/Contact/fields/PolicyStartDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyStartDate__c</fullName>
    <label>Policy Start Date</label>
    <type>Date</type>
</CustomField>