default/objects/Contact/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Postal code of the risk location.</description>
    <label>Risk ZIP/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>