default/objects/Contact/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Province of the risk address.</description>
    <label>Risk Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>