default/objects/Contact/fields/SourceChannel__c.field-meta.xml
<CustomField>
    <fullName>SourceChannel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>