default/objects/Contact/fields/Stairwell__c.field-meta.xml
<CustomField>
    <fullName>Stairwell__c</fullName>
    <description>Stairwell/Staircase.</description>
    <label>Risk Stairwell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>