default/objects/Contact/fields/StreetName__c.field-meta.xml
<CustomField>
    <fullName>StreetName__c</fullName>
    <description>Name of the street/avenue...</description>
    <label>Risk Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>