default/objects/Contact/fields/StreetType__c.field-meta.xml
<CustomField>
    <fullName>StreetType__c</fullName>
    <description>Street, avenue, square, promenade, etc.</description>
    <label>Risk Street Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>