default/objects/Contact/recordTypes/Policyholder.recordType-meta.xml
<RecordType>
    <fullName>Policyholder</fullName>
    <active>true</active>
    <label>Policyholder</label>
</RecordType>